@@ -44,6 +44,7 @@
 * Wompi: Add support for Authorize and Capture [rachelkirk] #4218
 * Priority: Update source and billing address checks [jessiagee] #4220
 * Pin Payments: Add support for `diners_club`, `discover`, and `jcb` cardtypes [montdidier] #4142
+* USA ePay: Add store method [ajawadmirza] #4224
 
 == Version 1.124.0 (October 28th, 2021)
 * Worldpay: Add Support for Submerchant Data on Worldpay [almalee24] #4147
